crypto app with firebase functionality

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         scroll-behavior: smooth;
       }
     </style>
-    <title>React App</title>
+    <title>Crypto Chasers</title>
   </head>
   <body>
     <div id="root"></div>
